---
source: src/codegen/tests/initialization_test/pou_initializers.rs
expression: function
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@__a_position.x = unnamed_addr constant i32 1
@__aa_position.x = unnamed_addr constant i32 2
@__bb_position.x = unnamed_addr constant i32 3
@__b_position.x = unnamed_addr constant i32 4
@__a_position.y = unnamed_addr constant i32 5
@__aa_position.y = unnamed_addr constant i32 5
@__bb_position.y = unnamed_addr constant i32 5
@__b_position.y = unnamed_addr constant i32 5

define i32 @a() {
entry:
  %a = alloca i32, align [filtered]
  %position = alloca i32, align [filtered]
  store i32 1, i32* %position, align [filtered]
  store i32 0, i32* %a, align [filtered]
  %a_ret = load i32, i32* %a, align [filtered]
  ret i32 %a_ret
}

define i32 @aa() {
entry:
  %aa = alloca i32, align [filtered]
  %position = alloca i32, align [filtered]
  store i32 2, i32* %position, align [filtered]
  store i32 0, i32* %aa, align [filtered]
  %aa_ret = load i32, i32* %aa, align [filtered]
  ret i32 %aa_ret
}

define i32 @bb() {
entry:
  %bb = alloca i32, align [filtered]
  %position = alloca i32, align [filtered]
  store i32 3, i32* %position, align [filtered]
  store i32 0, i32* %bb, align [filtered]
  %bb_ret = load i32, i32* %bb, align [filtered]
  ret i32 %bb_ret
}

define i32 @b() {
entry:
  %b = alloca i32, align [filtered]
  %position = alloca i32, align [filtered]
  store i32 4, i32* %position, align [filtered]
  store i32 0, i32* %b, align [filtered]
  %b_ret = load i32, i32* %b, align [filtered]
  ret i32 %b_ret
}
